--- a/TweetCloneHomework/Base.lproj/Main.storyboard
+++ b/TweetCloneHomework/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HZ4-UQ-uxK">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" textLabel="zv0-ud-tMH" style="IBUITableViewCellStyleDefault" id="xsn-7T-Ssx">
@@ -43,10 +43,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HZ4-UQ-uxK" secondAttribute="bottom" id="8aG-eo-3mW"/>
-                            <constraint firstAttribute="trailing" secondItem="HZ4-UQ-uxK" secondAttribute="trailing" id="BEi-Vq-n0R"/>
-                            <constraint firstItem="HZ4-UQ-uxK" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="L6F-Br-PR8"/>
-                            <constraint firstItem="HZ4-UQ-uxK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wvn-5G-Dy2"/>
+                            <constraint firstItem="HZ4-UQ-uxK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4hJ-1A-ccL"/>
+                            <constraint firstItem="HZ4-UQ-uxK" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="T5T-ke-1Fc"/>
+                            <constraint firstAttribute="trailing" secondItem="HZ4-UQ-uxK" secondAttribute="trailing" id="qc2-BP-BzK"/>
+                            <constraint firstItem="HZ4-UQ-uxK" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="trh-R3-CZd"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Timeline" id="6SW-MR-O3E"/>
