--- a/TweetCloneHomework/Base.lproj/Main.storyboard
+++ b/TweetCloneHomework/Base.lproj/Main.storyboard
@@ -49,7 +49,18 @@
                             <constraint firstItem="HZ4-UQ-uxK" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="trh-R3-CZd"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Timeline" id="6SW-MR-O3E"/>
+                    <navigationItem key="navigationItem" title="Timeline" id="6SW-MR-O3E">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="AcV-hX-qB9">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="pBk-1K-aap">
+                                <rect key="frame" x="20" y="7" width="100" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Switch User"/>
+                                <connections>
+                                    <action selector="userButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4ey-sr-PH0"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="HZ4-UQ-uxK" id="qlo-vB-5ix"/>
                     </connections>
