--- a/TweetCloneHomework/Base.lproj/Main.storyboard
+++ b/TweetCloneHomework/Base.lproj/Main.storyboard
@@ -81,23 +81,28 @@
         <!--Navigation Controller-->
         <scene sceneID="ePP-Qn-AOV">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2fJ-J9-qGT" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController id="5GO-bZ-Cgk" sceneMemberID="viewController">
+                <navigationController modalTransitionStyle="crossDissolve" id="5GO-bZ-Cgk" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="sfu-j4-N7O">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.52017429684597039" green="0.83050835257067046" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="0md-l1-v1J">
+                        <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="CwM-v2-9Vx" kind="relationship" relationship="rootViewController" id="JrG-0X-sZm"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2fJ-J9-qGT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1892" y="399"/>
         </scene>
-        <!--View Controller-->
+        <!--Tweet-->
         <scene sceneID="Lr7-Cl-R1r">
             <objects>
-                <viewController id="CwM-v2-9Vx" sceneMemberID="viewController">
+                <viewController id="CwM-v2-9Vx" customClass="TweetViewController" customModule="TweetCloneHomework" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ISI-Kj-8hQ"/>
                         <viewControllerLayoutGuide type="bottom" id="e9v-Jb-Uyl"/>
@@ -106,8 +111,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Specific page for tweet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H3m-qO-84d">
-                                <rect key="frame" x="20" y="224" width="177" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Display Tweet Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="23U-X0-M9A">
+                                <rect key="frame" x="77" y="289" width="148" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -115,7 +120,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="1fM-FM-GiJ"/>
+                    <navigationItem key="navigationItem" title="Tweet" id="1fM-FM-GiJ"/>
+                    <connections>
+                        <outlet property="singleTweet" destination="23U-X0-M9A" id="qsC-OL-UkU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8sI-VX-7Vk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -129,6 +137,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="CPJ-LV-nre">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.52017429684597039" green="0.83050835257067046" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
