Roughly followed along in class. I was too slow on one part, so I started falling behind. Many chunks of unfinished code.

--- a/TweetCloneHomework/TweetCell.xib
+++ b/TweetCloneHomework/TweetCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="45" id="fi8-VF-HaG" customClass="TweetCell" customModule="TweetCloneHomework" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="45" id="fi8-VF-HaG" customClass="TweetCell" customModule="TweetCloneHomework" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fi8-VF-HaG" id="K88-tT-kL0">
