--- a/TweetCloneHomework/Base.lproj/Main.storyboard
+++ b/TweetCloneHomework/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Timeline-->
@@ -69,14 +70,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Display Tweet Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="23U-X0-M9A">
-                                <rect key="frame" x="77" y="289" width="148" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Tweet Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="23U-X0-M9A">
+                                <rect key="frame" x="226" y="289" width="148" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ub9-66-1CL">
+                                <rect key="frame" x="282" y="236" width="37" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="37" id="o1t-Ad-cRd"/>
+                                    <constraint firstAttribute="height" constant="21" id="viU-3z-b0k"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Juf-ND-obe">
+                                <rect key="frame" x="270" y="168" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="NBN-Tf-HcG"/>
+                                    <constraint firstAttribute="height" constant="60" id="xSA-BH-JAP"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ka-V8-h7F">
+                                <rect key="frame" x="270" y="168" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="QSe-6q-7Ez"/>
+                                    <constraint firstAttribute="width" constant="60" id="XrL-fd-nNV"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="5I7-1A-k5E" kind="show" identifier="UserTimelineViewController" id="wJE-Yq-hw3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Juf-ND-obe" secondAttribute="trailing" constant="270" id="ADy-ZM-MUt"/>
+                            <constraint firstItem="Juf-ND-obe" firstAttribute="top" secondItem="ISI-Kj-8hQ" secondAttribute="bottom" constant="104" id="T9O-Kp-Utj"/>
+                            <constraint firstItem="Ub9-66-1CL" firstAttribute="centerX" secondItem="23U-X0-M9A" secondAttribute="centerX" id="ZA7-To-jrg"/>
+                            <constraint firstItem="1ka-V8-h7F" firstAttribute="top" secondItem="ISI-Kj-8hQ" secondAttribute="bottom" constant="104" id="avC-Rv-eyC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="1ka-V8-h7F" secondAttribute="trailing" constant="250" id="eRN-EE-YyI"/>
+                            <constraint firstItem="23U-X0-M9A" firstAttribute="top" secondItem="Ub9-66-1CL" secondAttribute="bottom" constant="32" id="fCA-gQ-2mq"/>
+                            <constraint firstItem="1ka-V8-h7F" firstAttribute="leading" secondItem="0I6-VW-vlW" secondAttribute="leadingMargin" constant="250" id="mH7-jX-aVA"/>
+                            <constraint firstItem="Ub9-66-1CL" firstAttribute="top" secondItem="1ka-V8-h7F" secondAttribute="bottom" constant="8" id="nES-Vj-aXe"/>
+                            <constraint firstItem="Juf-ND-obe" firstAttribute="leading" secondItem="0I6-VW-vlW" secondAttribute="leading" constant="270" id="nMb-hY-1bZ"/>
+                            <constraint firstItem="Ub9-66-1CL" firstAttribute="top" secondItem="Juf-ND-obe" secondAttribute="bottom" constant="8" id="uWv-Eq-LzH"/>
+                            <constraint firstItem="Ub9-66-1CL" firstAttribute="centerX" secondItem="Juf-ND-obe" secondAttribute="centerX" id="udq-CO-J7M"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Tweet" id="1fM-FM-GiJ"/>
                     <connections>
@@ -86,6 +127,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8sI-VX-7Vk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1895" y="399"/>
+        </scene>
+        <!--User Timeline View Controller-->
+        <scene sceneID="8gA-iZ-y5z">
+            <objects>
+                <viewController id="5I7-1A-k5E" customClass="UserTimelineViewController" customModule="TweetCloneHomework" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lhJ-c7-7Jk"/>
+                        <viewControllerLayoutGuide type="bottom" id="9N8-xl-V1c"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DfG-Ow-51b">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ou8-oo-WAk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2617" y="399"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KzJ-Xb-cQT">
@@ -104,6 +163,30 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="04Z-Up-0kj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="375" y="399"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dAD-bq-jPS">
+            <objects>
+                <viewController id="USz-JN-tt9" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wCU-tR-A76"/>
+                        <viewControllerLayoutGuide type="bottom" id="jUO-hx-5tk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IC5-b2-Uu4">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BzL-U5-Dal" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="VQS-Yf-2ua">
+            <objects>
+                <viewControllerPlaceholder id="85T-qF-Zom" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4DY-5g-sCz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
 </document>
